--- a/src/components/sass/tooplate-style.scss
+++ b/src/components/sass/tooplate-style.scss
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Maven+Pro:400,700");
+@import url('https://fonts.googleapis.com/css?family=Maven+Pro:400,700');
 
 // VARIABLES
-$font-base: "Maven Pro", sans-serif;
+$font-base: 'Maven Pro', sans-serif;
 $body-font-size: 18px;
 $h1-font-size: 2.8em;
 $h2-font-size: 2.4em;
@@ -14,11 +14,11 @@ $h1-font-color: #212121;
 $h2-font-color: #353535;
 $h3-font-color: #484848;
 $body-font-color: #5b5b5b;
-$text-white: #ffffff;
-$dark-mode-color: #0c0c0d;
-$main-color: #ffc200;
+$text-white: #fff;
+$dark-mode-color: #222;
+$main-color: purple;
 $border-color: #f2f2f1;
-$button-color: #474559;
+$button-color: #purple;
 
 $small-font-size: 14px;
 $link-font-size: 16px;
@@ -59,7 +59,8 @@ a {
   text-decoration: none !important;
   @include transition-effect;
   &:hover {
-    color: $main-color !important;
+    background-color: $main-color !important;
+    color: $text-white;
   }
 }
 
@@ -111,7 +112,7 @@ strong {
 
 // CUSTOM BUTTON
 .custom-btn {
-  color: $body-font-color;
+  color: purple;
   font-weight: $font-weight-bold;
   border-radius: 50px;
   padding: 13px 29px;
@@ -120,14 +121,15 @@ strong {
   overflow: hidden;
   @include transition-effect;
   &:hover {
-    color: $main-color;
+    color: #fff;
+    background-color: purple;
   }
   &.custom-btn-bg {
-    background: $button-color;
+    background: purple;
     color: $text-white;
     &:hover {
-      background: $main-color;
-      color: $text-white !important;
+      background: #fff;
+      color: purple !important;
     }
   }
 }
@@ -197,14 +199,14 @@ strong {
   z-index: 999999;
   will-change: transform;
   transition: transform 200ms linear;
-  &[class*="-unpinned"] {
+  &[class*='-unpinned'] {
     transform: translate(0, -150%);
   }
 
-  &[class*="-pinned"] {
+  &[class*='-pinned'] {
     transform: translate(0, 0);
   }
-  &[class*="headroom--not-top"] {
+  &[class*='headroom--not-top'] {
     background: $text-white;
     // box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.09);
     border-bottom: 1px solid #f0f0f0;
@@ -274,7 +276,7 @@ strong {
   &:focus {
     outline: none;
   }
-  &[aria-expanded="true"] {
+  &[aria-expanded='true'] {
     .navbar-toggler-icon {
       &:first-child {
         transform: rotate(45deg);
@@ -317,16 +319,16 @@ strong {
   position: relative;
   right: 6px;
   &:after {
-    font-family: "unicons";
-    content: "\ea9f";
+    font-family: 'unicons';
+    content: '\ea9f';
     font-size: 30px;
     font-weight: 300;
     font-style: normal;
   }
   &.active {
     &:after {
-      font-family: "unicons";
-      content: "\eb65";
+      font-family: 'unicons';
+      content: '\eb65';
       font-size: 30px;
       color: $text-white;
     }
@@ -342,7 +344,7 @@ strong {
     }
   }
   .navbar {
-    &[class*="headroom--not-top"] {
+    &[class*='headroom--not-top'] {
       background: $dark-mode-color;
       border-bottom: 1px solid #1f1f1f;
     }
@@ -381,7 +383,7 @@ strong {
     }
   }
   &:before {
-    content: "";
+    content: '';
     background: $button-color;
     width: 3px;
     height: 100%;
@@ -437,20 +439,20 @@ strong {
         position: absolute;
         top: 50%;
         transform: translate(0, -50%);
-        font-family: "unicons";
+        font-family: 'unicons';
         font-size: 100px;
         line-height: normal;
       }
     }
     .owl-prev {
       &:before {
-        content: "\e833";
+        content: '\e833';
         left: -45px;
       }
     }
     .owl-next {
       &:before {
-        content: "\e836";
+        content: '\e836';
         right: -45px;
       }
     }
@@ -458,7 +460,7 @@ strong {
 }
 
 .owl-theme {
-  .owl-nav [class*="owl-"] {
+  .owl-nav [class*='owl-'] {
     background: none;
     border-radius: 0;
     margin: 0;
