--- a/src/components/sass/tooplate-style.scss
+++ b/src/components/sass/tooplate-style.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Maven+Pro:400,700');
+@import url("https://fonts.googleapis.com/css?family=Maven+Pro:400,700");
 
 // VARIABLES
-$font-base: 'Maven Pro', sans-serif;
+$font-base: "Maven Pro", sans-serif;
 $body-font-size: 18px;
 $h1-font-size: 2.8em;
 $h2-font-size: 2.4em;
@@ -30,10 +30,12 @@ $link-font-size: 16px;
 body {
   font-family: $font-base;
   padding-top: 70px;
+  background-color: aliceblue;
 }
 
 .full-screen {
-  padding: 8rem 0;
+  height: 100vh;
+  padding: 5rem 0;
 }
 
 .small-text {
@@ -199,14 +201,14 @@ strong {
   z-index: 999999;
   will-change: transform;
   transition: transform 200ms linear;
-  &[class*='-unpinned'] {
+  &[class*="-unpinned"] {
     transform: translate(0, -150%);
   }
 
-  &[class*='-pinned'] {
+  &[class*="-pinned"] {
     transform: translate(0, 0);
   }
-  &[class*='headroom--not-top'] {
+  &[class*="headroom--not-top"] {
     background: $text-white;
     // box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.09);
     border-bottom: 1px solid #f0f0f0;
@@ -276,7 +278,7 @@ strong {
   &:focus {
     outline: none;
   }
-  &[aria-expanded='true'] {
+  &[aria-expanded="true"] {
     .navbar-toggler-icon {
       &:first-child {
         transform: rotate(45deg);
@@ -319,16 +321,16 @@ strong {
   position: relative;
   right: 6px;
   &:after {
-    font-family: 'unicons';
-    content: '\ea9f';
+    font-family: "unicons";
+    content: "\ea9f";
     font-size: 30px;
     font-weight: 300;
     font-style: normal;
   }
   &.active {
     &:after {
-      font-family: 'unicons';
-      content: '\eb65';
+      font-family: "unicons";
+      content: "\eb65";
       font-size: 30px;
       color: $text-white;
     }
@@ -344,7 +346,7 @@ strong {
     }
   }
   .navbar {
-    &[class*='headroom--not-top'] {
+    &[class*="headroom--not-top"] {
       background: $dark-mode-color;
       border-bottom: 1px solid #1f1f1f;
     }
@@ -383,7 +385,7 @@ strong {
     }
   }
   &:before {
-    content: '';
+    content: "";
     background: $button-color;
     width: 3px;
     height: 100%;
@@ -439,20 +441,20 @@ strong {
         position: absolute;
         top: 50%;
         transform: translate(0, -50%);
-        font-family: 'unicons';
+        font-family: "unicons";
         font-size: 100px;
         line-height: normal;
       }
     }
     .owl-prev {
       &:before {
-        content: '\e833';
+        content: "\e833";
         left: -45px;
       }
     }
     .owl-next {
       &:before {
-        content: '\e836';
+        content: "\e836";
         right: -45px;
       }
     }
@@ -460,7 +462,7 @@ strong {
 }
 
 .owl-theme {
-  .owl-nav [class*='owl-'] {
+  .owl-nav [class*="owl-"] {
     background: none;
     border-radius: 0;
     margin: 0;
